# Advanced-AI-Documentation-Helper

./: README.md  main.py  pyproject.toml
api/: server.py
api/routers/v1/ingestion/: ingestion_router.py  ingestion_service.py
api/routers/v1/ingestion/schemas/: request_schemas.py
common/: custom_types.py
vector_store/: chroma_vector_store_factory.py  ingestion.py  retriever.py
vector_store/interfaces/: vector_store_factory.py
